workflows/01_competitive_offers_ai_extraction/tests/test.txt
File "<ipython-input-5-089243e7efc2>", line 606
    match = re.search(r"(? str:
                      ^
SyntaxError: unterminated string literal (detected at line 606)
